--- a/lesson3/app/src/main/AndroidManifest.xml
+++ b/lesson3/app/src/main/AndroidManifest.xml
@@ -9,14 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screen.contact_list.ContactsListActivity">
+        <activity android:name=".ContactsListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screen.contact_pager.ContactPagerActivity"></activity>
     </application>
 
 </manifest>
